--- a/index.html
+++ b/index.html
@@ -1,34 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
-    <title>Weather</title>
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
+    <title>City Weather Dashboard</title>
 </head>
 
 <body>
-    <div class="jumbotron jumbotron-fluid bg-light">
-        <div class="container">
-            <h1 class="display-4" align="center">Weather Dashboard</h1>
-            <p class="lead" align="center">Below are forecasts and temperatures for the city selected</p>
+    <div class="jumbotron">
+        <h1 class="display-4 jumbo-title">WEATHER DASHBOARD</h1>
+        <p class="lead jumbo-subtitle">below are forecasts for the selected City</p>
+    </div>
+    <nav class="navbar sticky-top navbar-light bg-primary justify-content-left">
+        <form>
+            <div class="form-row" id="search-div">
+                <div class="col-sm-10">
+                    <input id="search" class="form-control" type="text" placeholder="City">
+                </div>
+                <div class="col-sm-2">
+                    <button class="btn my-1 my-sm-0 btn-secondary" id="searchBtn" type="submit">Search!</button>
+                </div>
+            </div>
+        </form>
+    </nav>
+    <div class="container">
+        <div class="row">
+            <br><br>
+        </div>
+        <div class="row">
+            <div class="btn-group-vertical city-name-btn col-lg-3" id="btn-group">
+            </div>
+            <div id="card" class="card col-lg-3 hide" style="width: 18rem;">
+                <div class="card-header city-name">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title "></h5>
+                    <div id="weather-icon">
+                        <img class="card-img-top" alt="Weather Icon">
+                    </div>
+                    <h1 class="temperature"></h1>
+                </div>
+                <ul class="list-group list-group-fixed">
+                    <li class="list-group-item description"></li>
+                    <li class="list-group-item humidity"></li>
+                    <li class="list-group-item wind"></li>
+                    <li class="list-group-item uvIndex"></li>
+                </ul>
+            </div>
+            <div class="col-lg-6 hide future-forecast">
+                <h5 id="five-day-title">Coming Days Forecast</h5>
+                <ul class="list-unstyled">
+                    <li class="media">
+                        <img src="" class="mr-3" alt="weather icon">
+                        <div class="media-body">
+                            <h5 class="mt-0 mb-1" id="day1"></h5>
+                            <p id="dayOneContent"></p>
+                        </div>
+                    </li>
+                    <li class="media my-4">
+                        <img src="" class="mr-3" alt="weather icon">
+                        <div class="media-body">
+                            <h5 class="mt-0 mb-1" id="day2">List-based media object</h5>
+                            <p id="dayTwoContent"></p>
+                        </div>
+                    </li>
+                    <li class="media">
+                        <img src="" class="mr-3" alt="weather icon">
+                        <div class="media-body">
+                            <h5 class="mt-0 mb-1" id="day3">List-based media object</h5>
+                            <p id="dayThreeContent"></p>
+                        </div>
+                    </li>
+                    <li class="media my-4">
+                        <img src="" class="mr-3" alt="weather icon">
+                        <div class="media-body">
+                            <h5 class="mt-0 mb-1" id="day4">List-based media object</h5>
+                            <p id="dayFourContent"></p>
+                        </div>
+                    </li>
+                    <li class="media">
+                        <img src="" class="mr-3" alt="weather icon">
+                        <div class="media-body">
+                            <h5 class="mt-0 mb-1" id="day5">List-based media object</h5>
+                            <p id="dayFiveContent"></p>
+                        </div>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+        <div class="row">
+            <br><br>
         </div>
     </div>
-    <form id="city-form">
-        <label for="city-input">Search for a City</label>
-        <input type="text" id="city-input"><br>
+    <footer class="footer">
 
-
-        <input id="find-city" type="submit" value="City Search">
-    </form>
-
-
-    <div id="city-view"></div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript"></script>
-    <script src="test.js"></script>
+    </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+    <script src="weather.js"></script>
 </body>
 
 </html>
