--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>City Weather Dashboard</title>
@@ -14,7 +16,7 @@
 
 <body>
     <div class="jumbotron">
-        <h1 class="display-4 jumbo-title">WEATHER DASHBOARD</h1>
+        <h1 class="display-7 jumbo-title">WEATHER DASHBOARD</h1>
         <p class="lead jumbo-subtitle">below are forecasts for the selected city</p>
     </div>
     <nav class="navbar sticky-top navbar-light bg-primary justify-content-left">
@@ -40,7 +42,6 @@
                 <div class="card-header city-name">
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title "></h5>
                     <div id="weather-icon">
                         <img class="card-img-top" alt="Weather Icon">
                     </div>
@@ -91,7 +92,6 @@
             </div>
         </div>
         <div class="row">
-            <br><br>
         </div>
     </div>
     <footer class="footer">
