--- a/index.html
+++ b/index.html
@@ -4,30 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@900&family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>City Weather Dashboard</title>
 </head>
 
 <body>
     <div class="jumbotron">
-        <h1 class="display-7 jumbo-title">WEATHER DASHBOARD</h1>
-        <p class="lead jumbo-subtitle">below are forecasts for the selected city</p>
+        <h1 class="display-7 jumbotron-title">WEATHER DASHBOARD</h1>
+        <p class="lead jumbotron-subtitle">below are forecasts for the selected city</p>
     </div>
     <nav class="navbar sticky-top navbar-light bg-primary justify-content-left">
         <form>
+            <div class="col-sm-30">
+                <button class="btn my-1 my--1 btn-secondary" id="searchBtn" type="submit">GO</button>
+            </div>
             <div class="form-row" id="search-div">
-                <div class="col-sm-10">
-                    <input id="search" class="form-control" type="text" placeholder="City">
-                </div>
-                <div class="col-sm-2">
-                    <button class="btn my-1 my-sm-0 btn-secondary" id="searchBtn" type="submit">Search!</button>
-                </div>
+                <input id="search" class="form-control" type="text" placeholder="Search for a City">
             </div>
         </form>
     </nav>
@@ -88,20 +83,13 @@
                         </div>
                     </li>
                 </ul>
-
             </div>
         </div>
-        <div class="row">
-        </div>
     </div>
-    <footer class="footer">
-
-    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
     <script src="weather.js"></script>
 </body>
-
 </html>
